<resources>
    <string name="app_name">WhereU</string>
    <string name="title_activity_main_screen">WhereU</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_event">CreateEventActivity</string>

    <!--Menu-->
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="notify_activate">Notify Me</string>
    <string name="notify_deactivate">Don\'t Notify Me</string>
    <string name="List">List</string>
    <string name="Map">Map</string>

    <!--List entries-->
    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>Map</item>
        <item>Create new event</item>
        <item>My event</item>
        <item>Settings</item>
        <item>Logout</item>
        <item>Event Detail</item>
    </string-array>

    <!--Icons list entries-->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_map_blue</item>
        <item>@drawable/ic_new_event</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    //eventDetail
    <string name="detail_no_event">no_event</string>
    <string name="detail_title">Title:</string>
    <string name="detail_category">Category:</string>
    <string name="detail_description">Description:</string>
    <string name="detail_location">Location:</string>
    <string name="detail_creation_time">Time</string>
    <string name="detail_button_navigate">Navigate Me</string>
    <string name="detail_button_participate_false">Participate</string>
    <string name="detail_distance">Distance:</string>
    <string name="detail_category_picture">Category Picture</string>

    //Participants List
    <string name="participants_back_button">Back to Event Details</string>
    <string name="participant_picture">Participant Picture</string>

    //CreateEvent
    <string name="create_name">Whats its name?</string>
    <string name="create_location">Where is it?</string>
    <string name="create_description">What do you do?</string>
    <string name="create_duration">How long do you do it?</string>
    <string name="create_maxMembers">How many can participate?</string>
    <string name="create_button">Start the awesome!</string>
    <string name="create_category">Which category does it belong to?</string>

    <string name="category_sport">Sport</string>
    <string name="category_music">Music</string>
    <string name="category_chilling">Chilling</string>
    <string name="category_drinking">Drinking</string>
    <string name="category_dancing">Dancing</string>
    <string name="category_video_games">Video Games</string>
    <string name="category_food">Food</string>

    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_participants_display">ParticipantsDisplayActivity</string>
    <string name="title_activity_participants_list">ParticipantsListActivity</string>

    //Login
    <string name="facebook_app_id">1413961288925759</string>
    
    //User
    <string name="profil_picture_with_px">800</string>
    <string name="profil_picture_height_px">800</string>
    <string name="createGeofence_button">Notify me for Events here!</string>
    <string name="title_activity_maps">Map</string>


</resources>
