<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="dhbw.mobile2.CreateEventActivity">


    <item android:id="@+id/action_list_events" android:title="@string/List" android:icon="@drawable/ic_list"
    android:orderInCategory="1" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_map" android:title="@string/Map" android:icon="@drawable/ic_map"
        android:orderInCategory="1" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_notify_activate" android:title="@string/notify_activate" android:icon="@drawable/ic_notify_activate"
        android:orderInCategory="2" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_notify_deactivate" android:title="@string/notify_deactivate" android:icon="@drawable/ic_notify_deactivate"
        android:orderInCategory="2" app:showAsAction="ifRoom"/>
</menu>
