<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dhbw.mobile2.EventDetailActivity">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="3">
        <ImageView
            android:id="@+id/category_picture"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_sport"
            android:tintMode="src_atop"
            android:tint="@color/icon_color"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_weight="2"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_creator_dynamic"
                android:gravity="center_horizontal"
                android:paddingStart="10sp"
                android:paddingEnd="20sp"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        //description
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_description_dynamic"
            android:layout_gravity="center_horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="10sp"
            android:gravity="center_horizontal"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5">
        //Line: Category
        <TextView
            android:id="@+id/detail_category_static"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_category"
            android:paddingStart="10sp"
            android:paddingEnd="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/detail_category_dynamic"
            android:gravity="center_horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="10sp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5">
        //creation time
        <TextView
            android:id="@+id/detail_creation_time_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/detail_creation_time"
            android:paddingStart="10sp"
            android:paddingEnd="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/detail_creation_time_dynamic"
            android:paddingStart="20sp"
            android:gravity="center_horizontal"
            android:paddingEnd="10sp"
            android:layout_weight="1" />
    </LinearLayout>
    //Participants
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detail_participants_dynamic"
        android:paddingStart="20sp"
        android:paddingEnd="10sp"
        android:layout_weight="0.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5">
        //locationName
        <TextView
            android:id="@+id/detail_location_name_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingStart="10sp"
            android:paddingEnd="20sp"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_location_name_dynamic"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="10sp"
            android:layout_weight="1" />
    </LinearLayout>
    //Map
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        //Button: Navigate
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_button_navigate"
            android:text="@string/detail_button_navigate"
           />

        //Button: Participate
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/detail_button_participate"
            android:paddingStart="20sp"
            android:paddingEnd="10sp"
            android:text="@string/detail_button_participate_false"
            android:visibility="visible"
            android:layout_weight="1"
            />

    </LinearLayout>
</LinearLayout>

</RelativeLayout>